--- a/Netflix-Clone.html
+++ b/Netflix-Clone.html
@@ -1,15 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Netflix-Clone</title>
 </head>
+
 <body>
-    
+    <header>
+        <div class="container-max-whidt px-lg-5 px-md-3">
+            <div class="row p-0 m-0">
+                <div class="col-xxl-1 col-xl-2 col-lg-2 col-6 p-2 align-items-center">
+                    <img  src="asset/Netflix_Logo_RGB.png" alt="Netflix_Logo_RGB" width="120"
+                        >
+                </div>
+                <div class="col-xxl-9  col-lg-7 d-flex gap-4 ps-4 align-items-center d-none d-lg-flex">
+                    <a class="nav-link" href="Netflix-Clone.html">Home</a>
+                    <a class="nav-link" href="#">TV Shows</a>
+                    <a class="nav-link" href="#">Movies</a>
+                    <a class="nav-link" href="#">News & Popular</a>
+                    <a class="nav-link" href="#">My List</a>
+                    <a class="nav-link" href="#">Browse by Languages</a>
+                </div>
+                <div class="col-xxl-2 col-xl-3 col-lg-3 col-6 d-flex gap-4 align-items-center justify-content-end">
+                    <i class="bi bi-search fs-5"></i>
+                    <a class="nav-link d-none d-lg-flex" href="#">Kids</a>
+                    <i id="bell" class="bi bi-bell fs-5"></i>
+                    <div class="account d-flex align-items-center gap-2">
+                        <img id="account" class=" rounded-3" src='http://fakeimg.pl/50x50?text=ID&font=lobster' alt='' width="35" height="35">
+                        <i class="bi bi-caret-down-fill"></i>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </header>
+
 </body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 <script src="script.js"></script>
+
 </html>
