2th & 3th  line item film ready

--- a/Netflix-Clone.html
+++ b/Netflix-Clone.html
@@ -44,7 +44,19 @@
     <section>
         <h3>Hello!</h3>
         <div id="lineOne" class="container-max-whidt">
-            <div id="image-container" class="gap-2">
+            <div id="image-containerOne" class="gap-2">
+                </div>
+        </div>
+
+        <h3>Hello!</h3>
+        <div id="lineTwo" class="container-max-whidt">
+            <div id="image-containerTwo" class="gap-2">
+                </div>
+        </div>
+
+        <h3>Hello!</h3>
+        <div id="lineThree" class="container-max-whidt">
+            <div id="image-containerThree" class="gap-2">
                 </div>
         </div>
     </section>
