--- a/Netflix-Clone.html
+++ b/Netflix-Clone.html
@@ -19,13 +19,13 @@
                     <img  src="asset/Netflix_Logo_RGB.png" alt="Netflix_Logo_RGB" width="120"
                         >
                 </div>
-                <div class="col-xxl-9  col-lg-7 d-flex gap-4 ps-4 align-items-center d-none d-lg-flex">
+                <div class="col-xxl-9  col-lg-7 d-flex gap-4 ps-4 align-items-center d-none d-lg-flex midbar">
                     <a class="nav-link" href="Netflix-Clone.html">Home</a>
-                    <a class="nav-link" href="#">TV Shows</a>
-                    <a class="nav-link" href="#">Movies</a>
-                    <a class="nav-link" href="#">News & Popular</a>
-                    <a class="nav-link" href="#">My List</a>
-                    <a class="nav-link" href="#">Browse by Languages</a>
+                    <a class="nav-link" href="#" id="TVShows">TV Shows</a>
+                    <a class="nav-link" href="#" id="Movies">Movies</a>
+                    <a class="nav-link" href="#" id="News">News & Popular</a>
+                    <a class="nav-link" href="#" id="My">My List</a>
+                    <a class="nav-link" href="#" id="Browse">Browse by Languages</a>
                 </div>
                 <div class="col-xxl-2 col-xl-3 col-lg-3 col-6 d-flex gap-4 align-items-center justify-content-end">
                     <i class="bi bi-search fs-5"></i>
@@ -41,25 +41,82 @@
         </div>
     </header>
 
-    <section>
-        <h3>Hello!</h3>
-        <div id="lineOne" class="container-max-whidt">
+    <section id="content">
+        <h3>Trending Now</h3>
+        <div id="lineOne" class="">
+            <div class="buttonLeft">
+                <i id="prev-button" class="bi bi-chevron-compact-left fs-1 d-none d-lg-flex"></i>
+            </div>
             <div id="image-containerOne" class="gap-2">
                 </div>
+                <div class="buttonRight">
+                    <i id="next-button" class="bi bi-chevron-compact-right fs-1  d-none d-lg-flex"></i>
+                </div>   
         </div>
 
-        <h3>Hello!</h3>
-        <div id="lineTwo" class="container-max-whidt">
+        <h3>Watch It Again</h3>
+        <div id="lineTwo" class="">
+            <div class="buttonLeft">
+                <i  id="prev-button-2" class="bi bi-chevron-compact-left fs-1  d-none d-lg-flex"></i>
+            </div>
             <div id="image-containerTwo" class="gap-2">
                 </div>
+                <div class="buttonRight">
+                    <i id="next-button-2" class="bi bi-chevron-compact-right fs-1  d-none d-lg-flex"></i>
+                </div>   
         </div>
 
-        <h3>Hello!</h3>
-        <div id="lineThree" class="container-max-whidt">
+        <h3>New Releases</h3>
+        <div id="lineThree" class="">
+            <div class="buttonLeft">
+                <i   id="prev-button-3" class="bi bi-chevron-compact-left fs-1  d-none d-lg-flex"></i>
+            </div>
             <div id="image-containerThree" class="gap-2">
                 </div>
+                <div class="buttonRight">
+                    <i id="next-button-3" class="bi bi-chevron-compact-right fs-1  d-none d-lg-flex"></i>
+                </div>   
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="container d-flex gap-4 fs-2 align-items-center mb-5">
+                <a href="#"><i class="bi bi-instagram text-white"></i></a>
+                <a href="#"> <i class="bi bi-facebook  text-white"></i></a>
+                <a href="#"><i class="bi bi-twitter  text-white"></i></a>
+                <a href="#"><i class="bi bi-youtube  text-white"></i></a>
+            </div>
+            <div class="row text-white-50 ps-2 d-flex flex-wrap">
+                <div class="col-6 d-flex flex-wrap">
+                    <div class="col-sm-12 col-lg-6">
+                        <a href="#"><p>Audio Description</p></a>
+                        <a href="#"><p>Investor Relations</p></a>
+                        <a href="#"><p>Legal Notices</p></a>
+                        <a href="#"><p>Ad Choices</p></a>
+                    </div>
+                    <div class="col-sm-12 col-lg-6">
+                        <a href="#"><p>Help Center</p></a>
+                        <a href="#"><p>Jobs</p></a>
+                        <a href="#"><p>Cookie Preferences</p></a>
+                    </div>
+                </div>
+                <div class="col-6 d-flex flex-wrap">
+                    <div class="col-sm-12 col-lg-6">
+                        <a href="#"><p>Gift Cards</p></a>
+                        <a href="#"><p>Terms of Use</p></a>
+                        <a href="#"><p>Corporate Information</p></a>
+                    </div>
+                    <div class="col-sm-12 col-lg-6">
+                        <a href="#"><p>Media Center</p></a>
+                        <a href="#"><p>Privacy</p></a>
+                        <a href="#"><p>Contact Us</p></a>
+                    </div>
+                </div>
+          
+            </div>
+        </div>
+    </footer>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
